googleVis 0.5.4 [2014-06-28]
----------------------------

Changes



googleVis 0.5.3 [2014-06-28]
----------------------------

Changes

* Default chart width is set to 'automatic' instead of 500 pixels.

* Intervals for columns roles have to end with the suffix ".i",
  with i being an integer. Several interval columns are allowed,
  see the Roles demo and vignette for more details.

Bug Fix

* The order of y-variables in core charts wasn't maintained.
  Thanks to John Taveras for reporting this bug.

* Width and height of googleVis charts were only accpeted in pixels, 
  although the Google Charts API uses standard HTML units (for
  example, '100px', '80em', '60', 'automatic'). If no units are specified 
  the number is assumed to be pixels. This has been fixed.
  Thanks to Paul Murrell for reporting this issue.


googleVis 0.5.2 [2014-05-05]
----------------------------
Changes

* Fixed minor formatting issues in documentation and vignettes.

* Added examples in demo googleVis to show how to
  customize points and lines and to the help files of
  gvisLineChart and gvisScatterChart.


googleVis 0.5.1 [2014-04-14]
----------------------------
NEW FEATURES

* New functions gvisSankey, gvisAnnotationChart, gvisHistogram,
  gvisCalendar and gvisTimeline to support the new Google charts 
  of the same names (without 'gvis').

* New demo Trendlines showing how trend-lines can be added to
  Scatter-, Bar-, Column-, and Line Charts.

* New demo Roles showing how different column roles can be used
  in core charts to highlight data.

* New vignettes written in R Markdown showcasing googleVis
  examples and how the package works with knitr.

Changes

* The help files of gvis charts no longer show all their options,
  instead a link to the online Google API documentation is given. 

* Updated googleVis demo

* All googleVis output will be displayed in your default browser. 
  In previous versions of googleVis output could also be displayed 