@@ -197,7 +197,7 @@
 	title = {google{V}is: Using the {G}oogle {C}harts {API} with {R}},
 	author = {Markus Gesmann and Diego de Castillo},
 	year = {2014},
-	note ={R package version 0.5.3},
+	note ={R package version 0.5.4},
 	Howpublished = {\url{http://github.com/mages/googleVis}}
 }
 
