@@ -1,8 +1,9 @@
-googleVis 0.5.4 [2014-06-28]
+googleVis 0.5.4 [2014-06-19]
 ----------------------------
 
 Changes
 
+* Tyding up of googleVis demo, vignette and README file
 
 
 googleVis 0.5.3 [2014-06-28]
